# protophen

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  deployment.yaml  experiment.yaml  jumpcp.yaml  pretraining.yaml
docker/: Dockerfile  Dockerfile.gpu  docker_compose.yml
notebooks/: 00_jumpcp_exploration.ipynb  01_protein_embeddings.ipynb  01_protein_embeddings.py  02_phenotype_exploration.ipynb  02_phenotype_exploration.py  03_model_training.ipynb  03_model_training.py  04_active_learning.ipynb  04_active_learning.py  05_deployment.ipynb  06_phenotype_pretraining.ipynb
notebooks/data/raw/jumpcp/: cache_index.json
protophen/: __init__.py
protophen/active_learning/: __init__.py  acquisition.py  selection.py  uncertainty.py
protophen/analysis/: __init__.py  clustering.py  interpretation.py  visualisation.py
protophen/data/: __init__.py  dataset.py  loaders.py  phenotype.py  protein.py
protophen/data/jumpcp/: __init__.py  access.py  cache.py  curation.py  metadata.py  profiles.py
protophen/embeddings/: __init__.py  esm.py  esmfold.py  fusion.py  physicochemical.py
protophen/models/: __init__.py  autoencoder.py  decoders.py  encoders.py  losses.py  protophen.py
protophen/phenotype/: __init__.py  cellpainting.py  embedding.py  normalisation.py
protophen/serving/: __init__.py  api.py  monitoring.py  pipeline.py  registry.py  schemas.py
protophen/training/: __init__.py  callbacks.py  metrics.py  trainer.py
protophen/utils/: __init__.py  config.py  io.py  logging.py
scripts/: __init__.py  batch_inference.py  curate_pretraining.py  download_jumpcp.py  extract_embeddings.py  pretrain_mapping.py  pretrain_phenotype.py  run_active_learning.py  serve.py  train_model.py
tests/: test_active_learning.py  test_analysis.py  test_autoencoder.py  test_dataset.py  test_embeddings.py  test_installation.py  test_integration.py  test_jumpcp.py  test_loaders.py  test_models.py  test_physicochemical.py  test_protein.py  test_serving.py  test_training.py
